example apps/host-routing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: host-routing
spec:
  backend:
    serviceName: nginxhello-default
    servicePort: 80
  rules:
  - host: blue.eqslearning.com
    http:
      paths:
      - backend:
          serviceName: nginxhello-blue
          servicePort: 80
  - host: red.eqslearning.com
    http:
      paths:
      - backend:
          serviceName: nginxhello-red
          servicePort: 80
